# create-ata-if-missing-program

./: Cargo.toml  README.md
src/: lib.rs
tests/: functional.rs
