[package]
name = "create_ata_if_missing"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false


[dependencies]
solana-program = "1.6.16"
thiserror = "1.0.24"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.2", features = ["no-entrypoint"] }
num-derive = "0.3"
num-traits = "0.2"
arrayref = "0.3.6"

zeroize = "=1.3.0"

[features]
test-bpf = []
no-entrypoint = []

[dev-dependencies]
assert_matches = "1.4.0"
bincode = "1.3.1"
solana-sdk = "1.6.16"
solana-program-test = "1.6.16"
tokio = { version = "0.3", features = ["macros"]}

[lib]
crate-type = ["cdylib", "lib"]
